<resources>
    <!--Titles-->
    <string name="app_name">Mascostas Extraviadas</string>
    <string name="title_activity_main">Mascostas Extraviadas</string>
    <string name="title_activity_register_add">Agrega una mascota</string>
    <string name="title_activity_register_view">Informacion de \u0020</string>
    <string name="title_activity_favorites">Favoritos</string>
    <!--Views-->
    <string name="register_name">Nombre del perro</string>
    <string name="register_spinner">Raza</string>
    <string name="register_email">Correo</string>
    <string name="register_phone">Telefono</string>
    <string name="register_address">Direccion</string>
    <string name="register_buttonImage">Tomar Foto</string>
    <string name="register_buttonCancel">Cancelar</string>
    <string name="register_buttonSave">Salvar</string>
    <string name="register_lable_spinner">Raza</string>
    <string name="register_lable_checkbox">Favoritos</string>
    <string name="register_lable_imageView">Imagen</string>

    <!--Messages-->
    <string name="register_mode_edit">Modo Editar</string>
    <string name="register_mode_show">Modo Mostrar</string>
    <string name="register_mode_register">Modo Registrar</string>
    <string name="register_msg_error">Campo obligatorio</string>
    <string name="register_msg_success">Campo obligatorio</string>
    <string name="register_msg_change_made">Cambio guardaddo</string>
    <string name="main_empty_list">La lista esta vacia</string>

    <!--Spinner-->
    <string-array name="razas_array">
        <item>Pequines</item>
        <item>Chihuahua</item>
        <item>Pastor Aleman</item>
        <item>York Shire</item>
        <item>Labrador</item>
        <item>Dalmata</item>
        <item>Husky</item>
        <item>Pitbul</item>
        <item>Indefinido</item>
    </string-array>


</resources>
